fixtures/errors/class_super_constructor_error.js
// super() is only valid in derived constructors.
class Base {
  constructor() {
    super();
  }
}

new Base();
