fixtures/errors/class_super_constructor_error.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: super() is only valid inside derived constructors
 --> errors/class_super_constructor_error.js:4:5
4 |     super();
  |     ^^^^^

